@@ -4,7 +4,7 @@
 
 Summary: Mono module for Apache 2
 Name: mod_mono
-Version: 0.3.5
+Version: 0.3.6
 Release: 1
 License: The Apache License
 Group: System Environment/Daemons
